# AgentsMonitoring

./: LICENSE  README.md  install.sh  pyproject.toml
agentsmon/: __init__.py  __main__.py  config.py  dashboard.py  detect.py  doctor.py  keepalive.py  service.py  status.py  uninstaller.py  wizard.py
